--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Categories.html"> Categories </a>
+            <a class="nav-link" href="#"> Categories </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="Contact-Us.html"> Contact Us </a>
